# librarius-lexicon

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
config/: urls.py
config/settings/: base.py
src/apps/core/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/core/migrations/: 0001_initial.py  0002_alter_audiobook_narrator_alter_audiobook_status.py
src/apps/importer/: apps.py  dataclasses.py  detect.py  main.py  tasks.py
src/apps/importer/migrations/: 0001_ImporterSchedule.py
templates/: base.html
templates/core/: audiobook_edit.html  audiobook_list.html
